--- a/styles/styles.css
+++ b/styles/styles.css
@@ -279,10 +279,29 @@
     display: block;
 }
 .meet-img-container{
+    width: 1080px;
+    height: 604px ;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
+    gap: 20px;
+    margin-left: 350px;
+    background-color: rgba(255, 255, 255, 0.1);
+    padding-left: 30px;
+    padding-right: 30px;
+    padding-top: 30px;
+    padding-bottom: 30px;
+    border-radius: 20px;
+  
+   
 }
 .img-1-trainer{
     width: 326px;
     height: 272px;
+    border-radius: 10px;
 }
+.meet-pic-text{
+    margin-top: -120px;
+    padding: 20px;
+}
+
+/* footer section start here */
