--- a/styles/styles.css
+++ b/styles/styles.css
@@ -267,17 +267,19 @@
 .team-text{
     width: 671px;
     height: 120px;
-    justify-content: center;
+    margin-left: 600px;
     text-align: center;
-    margin-left: 550px;
     margin-bottom: 100px;
 }
 .ti-meet{
     font-size: 3rem;
 }
 .team-container{
-    display: block;
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    
 }
+
 .meet-img-container{
     width: 1080px;
     height: 604px ;
@@ -306,34 +308,58 @@
 
 /* footer section start here */
 .footer-container{
-    margin-top: 100px;
+    margin-top: 50px;
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    width: 1910px;
+    height: 400px;
+    background-color:rgba(255, 255, 255, 0.1) ;
+}
+.footer-links-container{
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    justify-content: center;
-    align-items: center;
     justify-content: space-between;
-    padding-left: 80px;
-    background-color: rgba(255, 255, 255, 0.1);
-    width: 1810px;
-    height: 480px;
+    align-items: center;
+    margin-left: 300px  ;
 }
-
-.hr{
-    width: 1050px;
-    background-color: rgba(255, 255, 255, 0.1);
-    
-
-}
-.foot-p{
-   display:block;
-    justify-content: center;
+.footer-last{
+    align-items: center;
     text-align: center;
-   
-    margin-top: 0px;
-    max-block-size: 200PX;
-
 }
-.last-item{
-    background-color: rgba(255, 255, 255, 0.1);
-    height: 50PX;
+
+
+
+/* responsive media query */
+
+@media screen and (max-width:576px) {
+    .meet-img-container{
+        grid-template-columns: repeat(1, 1fr);
+    }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+    .footer-links-container{
+        grid-template-columns: repeat(1, 1fr);
+        
+    }
+    
 }
